# preference-permission-lab

./: .env.example  .gitignore  ARTIFACTS.md  CITATION.cff  LICENSE  PAPER.md  PHASE3A_REPORT.md  PHASE_2_PREREGISTRATION.md  PHASE_3A_CONFIRMATORY_PREREG.md  PHASE_3A_DESIGN.md  PHASE_3B_DESIGN.md  PHASE_3C_MECHANISTIC_DESIGN.md  PHASE_3_DESIGN.md  README.md  RESULTS_PHASE_1.md  RESULTS_PHASE_2.md  RESULTS_PHASE_3A.md  RESULTS_PHASE_3A_CLEAN_CONFIRMATORY.md  RESULTS_PHASE_3A_CONFIRMATORY.md  RESULTS_PHASE_3A_EXTERNAL_CLAUDE.md  RESULTS_PHASE_3A_PILOT.md  RESULTS_PHASE_3A_ROBUSTNESS.md  RESULTS_PHASE_3B.md  RESULTS_PHASE_3C_MECHANISTIC.md  SECURITY_REPORT.md  benchmark_costs.example.yaml  pyproject.toml
reports/: dp_claude.csv  dp_claude.json  dp_claude.md  dp_gpt41.csv  dp_gpt41.json  dp_gpt41.md  exp_01d9daa5352a_manifest.json  exp_260658f69ba2_manifest.json  exp_2b603b8dd907_manifest.json  exp_3f66034ca661_manifest.json  exp_42b65a00437f_analysis.md  exp_45e3ea5c7323_manifest.json  exp_5c271eaf218e_manifest.json  exp_6070de5b27f2_analysis.md  exp_7080220f78e1_manifest.json  exp_883044e0efa8_manifest.json  exp_89978ecadfe1_manifest.json  exp_aba10c9c9f1c_analysis.md  exp_aeab60665f4e_manifest.json  exp_b06e0886b0a7_manifest.json  exp_b32d3705408a_analysis.md  exp_b7aed95df06d_manifest.json  exp_d5539d613da5_manifest.json  exp_d578f2c81067_manifest.json  exp_eb2fc35c2502_manifest.json  exp_ebc971511b38_manifest.json  exp_ee6abe2d5c91_manifest.json  exp_fda1ae475fa1_manifest.json  latest.csv  latest.json  latest.md  p3c_analysis.json  p3c_beh.json  p3c_directions.json  (+29 more)
(+63 files in other folders)
