[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "preference-permission-lab"
version = "0.1.0"
description = "A research lab to study Preference-to-Permission Confusion in agentic AI systems"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Security Research" }]
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = [
    "openai>=1.30",
    "anthropic>=0.34",
]
report = [
    "pandas>=2.2",
]
mech = [
    "torch>=2.3",
    "transformers>=4.44",
    "accelerate>=0.33",
    "numpy>=1.26",
    "scikit-learn>=1.4",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
pplab = "pplab.runner:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
